# api/swagger/v1/swagger.yaml
@@ -192,6 +192,20 @@ paths:
                 $ref: '#/components/schemas/Article'
         '422':
           $ref: '#/components/responses/Unprocessable'
+  /articles/count_by_author:
+    get:
+      tags:
+        - Articles
+      summary: Conta artigos agrupados por autor
+      responses:
+        '200':
+          description: Operação realizada com sucesso
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ArticlesCountByAuthor'
   /articles/{id}:
     parameters:
       - $ref: '#/components/parameters/ResourceId'
@@ -394,3 +408,12 @@ components:
                 type: string
             author_id:
               type: integer
+    ArticlesCountByAuthor:
+      type: object
+      properties:
+        author_id:
+          type: integer
+        author_name:
+          type: string
+        articles_count:
+          type: integer
